# birthday-party-website

./: buildspec.ansible.yml  buildspec.sam.yml  pyproject.toml  requirements.txt
infra/: playbook.yml
infra/inventory/: hosts.ini
lambda_functions/: .env.template  __init__.py  samconfig.toml  template.yaml
lambda_functions/add_guest/: requirements.txt
lambda_functions/add_guest/app/: add_guest.py  auth_header_parsing.py  form_body_parsing.py  main.py  send_email.py
lambda_functions/admin/: requirements.txt
lambda_functions/admin/app/: admin.py  auth_header_parsing.py  check_auth.py  get_all_guests.py
lambda_functions/admin/templates/: admin.html
lambda_functions/get_guest_name_from_invite_uuid/: app.py  requirements.txt
lambda_functions/index/: index.py  requirements.txt
lambda_functions/invite/: invite.py  requirements.txt
lambda_functions/invite/templates/: invite.html
lambda_functions/tests/: requirements.txt
lambda_functions/tests/integration/: conftest.py  test_add_guest.py  test_admin.py  test_get_guest_name_from_invite_uuid.py  test_index.py  test_invite.py  test_update_guest_rsvp.py
lambda_functions/tests/unit/: test_check_auth.py  test_get_all_guests.py  test_get_guest_name_from_invite_uuid.py  test_get_username_and_password.py  test_parse_form_body.py  (+2 more)
lambda_functions/update_guest_rsvp/: app.py  update_guest_rsvp.py
src/: admin.py  app.py  exceptions.py  logger.py  model.py  send_email.py  setup_db.py
src/static/: style.css
src/templates/: admin.html  index.html  invite.html
tests/: test_model.py
website/: invite.html.j2
(+4 files in other folders)
