[project]
name = "birthday-party-website"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Quinn",email = "mjquinn88@outlook.com"}
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false